--- a/Burgess Modern Day Warriors/style.css
+++ b/Burgess Modern Day Warriors/style.css
@@ -8,7 +8,7 @@ body {
 	background-color: #000000;
 	font-family: 'PT Sans', sans-serif;
 	font-size: 20px;
-	color: #FF0000;
+	color: #E41B17;
 	text-align: center;
 	padding-top: 35px;
 }
@@ -17,7 +17,7 @@ footer{
   font-family:"Comic Sans MS";
   font-size:12px;
   background-color:#000000;
-  color:#FF0000;
+  color:#E41B17;
   padding-top:4px;
   padding-bottom:1px;
   text-align:center; 
@@ -27,7 +27,7 @@ ul{
 	list-style-type: none;
 	margin:0;
 	padding:10px;
-	border: 4px solid #FF0000;
+	border: 4px solid #E41B17;
 	background-color:#010101;
 }
 li {
@@ -39,7 +39,7 @@ li {
 .navbar-brand{
   font-family:'PT Sans', sans-serif;
   font-size: 24px;
-  color:red !important;
+  color:#E41B17 !important;
 }
 
 .navbar-right {
@@ -53,7 +53,7 @@ li {
 }
 
 .nav.navbar-nav.navbar-right li a:hover {
-  background-color:red;
+  background-color:#E41B17;
 }
 
 /*font size and type for about sensei page.*/ 
@@ -62,7 +62,7 @@ li {
 	padding-top:50px;
 	font-size:25px;
 	font-family: 'PT Sans', sans-serif;
-	color:red !important;
+	color:#E41B17 !important;
 	text-align:right;
 	padding-left: 15px;
 	padding-right:15px;
@@ -76,21 +76,23 @@ li {
 	height:400px;
 	border-radius: 85%;
 	border-style: solid;
-	border-color:red;
+	border-color:#E41B17;
 }
 
 .funclass {
 	padding-top:50px;
 	font-size:25px;
 	font-family: 'PT Sans', sans-serif;
-	color:red !important;
+	color:#E41B17 !important;
 	text-align:left;
 	padding-left: 15px;
 	margin-left:auto;
 	margin-right:auto;
 }
 .pics {
-	max-width: 300px;
+	object-fit:cover;
+	max-width: 400px;
+	max-height: 200px;
 	display: inline;
 	margin: auto;
 	padding: 15px 15px 15px 15px;
@@ -143,7 +145,7 @@ li {
 
 /* Caption text */
 .text {
-	color: red;
+	color: #E41B17;
 	font-size: 25px;
 	padding: 8px 12px;
 	position: absolute;
@@ -154,8 +156,8 @@ li {
 
 /* number text 1/9 etc) */
 .numbertext {
-	color:red;
-	font-size: 15px;
+	color:#E41B17;
+	font-size: 20px;
 	padding: 8px 12px;
 	position: absolute;
 	top:0;
@@ -202,14 +204,14 @@ li {
 	padding-top:50px;
 	font-size:25px;
 	font-family: 'PT Sans', sans-serif;
-	color:red !important;
+	color:#E41B17 !important;
 	text-align:center;
 	padding-left: 15px;
 	margin-left:auto;
 	margin-right:auto;
 }
 #facebook {
-  background-color:#33ccff;
+  background-color:#3B5998;
   color:white;
   box-shadow: 1.5px 1.5px 1.5px rgba(0,0,0,0.5);
 }
@@ -232,4 +234,10 @@ li {
 	padding-left: 15px;
 	margin-left:auto;
 	margin-right:auto;
+}
+
+.container {
+	width: 989px;
+	margin: 0 auto;
+	background-color:black;
 }
